overflow-hidden in main-container solved

--- a/src/styles/common/base.scss
+++ b/src/styles/common/base.scss
@@ -6,11 +6,19 @@
 }
 
 body {
-  @apply font-display dark:bg-slate-900;
+  @apply font-display dark:bg-slate-900 overflow-hidden;
 }
 
 .main-container {
-  @apply px-4 md:px-8 lg:px-16 py-4 lg:py-6 flex-1 space-y-5 md:space-y-10 overflow-hidden;
+  @apply px-4 md:px-8 lg:px-16 py-4 lg:py-6 flex-1 space-y-5 md:space-y-10 overflow-y-scroll overflow-hidden;
+
+  &::-webkit-scrollbar {
+    @apply w-1;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    @apply bg-dark dark:bg-light rounded-full;
+  }
 }
 
 .btn {
